Optimize Draw.io intent routing and logs